# WTFWorld

./: CMakeLists.txt  LICENSE  README.md  REAMD.md
App/githubExplorer/: githubExplorer.py
App/worldbuilder-Minecraft/: worldbuilder-Minecraft.py
FolderPoint/: FolderPoint.cpp
Frame/FolderPoint/: FolderPoint.cpp
Frame/FrameLibPoint/: FrameLibPoint.cpp
Frame/Manager/: Interface.cpp
Frame/Setup/: RegistrySet.hpp
ODK/: buildPackage.py  packList.xlsx
SDK/frame/WindowsRegistry/: WindowsRegistry.h
SDK/odk/: buildPackage.py
SDK/package/compiled/: quantumRandom.pyd
SDK/source/FolderPoint/: FolderPoint.cpp
SDK/source/FrameLibPoint/: FrameLibPoint.cpp
SDK/source/Setup/: RegistrySet.hpp  test.cpp
SDK/source/WindowsRegistry/: WindowsRegistry.h
SDK/source/quantumRandom/: quantumRandom.c  quantumRandom.cp37-win_amd64.pyd
dev/app/quantumRandom/: quantumRandom.py  setup.py
dev/frame/FolderPoint/: FolderPoint.cpp
dev/frame/FrameLibPoint/: FrameLibPoint.cpp
dev/frame/Setup/: test.cpp
docs/: README_zh-cn.md
